minor spacing fix

--- a/colorscheme.css
+++ b/colorscheme.css
@@ -8,6 +8,8 @@ body {
 #content {
 	margin: 0 auto;
 	width: 70%;
+
+	padding-top: 30px;
 }
 
 input {
